--- a/src/components/Cards/Basic/Basic.astro
+++ b/src/components/Cards/Basic/Basic.astro
@@ -4,6 +4,7 @@ import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from '@utils/payload/helpers';
 const {cards} = Astro.props;
+// console.log(cards);
 ---
 
 <div class={s["basic_card"]} data-animate="slide-up" data-animate-children-only="true">
