--- a/src/components/Footer/FloatingFooter/FloatingFooter.astro
+++ b/src/components/Footer/FloatingFooter/FloatingFooter.astro
@@ -18,9 +18,9 @@ const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
 ---
 
-<footer class={s["floating_footer page-section"]}>
+<footer class:list={[s["floating_footer"], "page-section"]}>
     <Container>
-        <div class={s["breakout floating_footer__content"]} data-highlight="true">
+        <div class:list={[s["floating_footer__content"], "breakout"]} data-highlight="true">
             <p>
                 &copy; {new Date().getFullYear()} {title.split("|")[0].trim()}. {copyright}
             </p>
