--- a/src/components/Hero/DefaultHero/DefaultHero.astro
+++ b/src/components/Hero/DefaultHero/DefaultHero.astro
@@ -9,26 +9,28 @@ import CustomImage from "@components/CustomImage.astro";
 const props = Astro.props;
 ---
 
-<header class={s["overflow_hero"]}>
+<header class={s["hero"]}>
     <CustomImage
-        id={s["overflow_hero__image"]}
+        id={s["hero__image"]}
         image={props.cover}
-        classlist={s["overflow_hero__image"]}
+        classlist={s["hero__image"]}
         size="large"
         eager={true}
     />
-    <div class={s["overflow_hero__overlay"]}></div>
-    <Container>
-        <div class={s["overflow_hero__wrapper"]}>
-            <article class={s["overflow_hero__content"]}>
-                <h1 set:html={props.heading} />
-                <p>{props.excerpt}</p>
-                <a
-                    href="#contact"
-                    class="btn  btn--primary"
-                    style="margin-top: 0.825rem;">Let's Talk</a
-                >
-            </article>
-        </div>
-    </Container>
+    <div class={s["hero__overlay"]}></div>
+    <div class={s["hero-container"]}>
+        <Container>
+            <div class={s["hero__wrapper"]}>
+                <article class={s["hero__content"]}>
+                    <h1 set:html={props.heading} />
+                    <p>{props.excerpt}</p>
+                    <a
+                        href="#contact"
+                        class="btn  btn--primary"
+                        style="margin-top: 0.825rem;">Let's Talk</a
+                    >
+                </article>
+            </div>
+        </Container>
+    </div>
 </header>
