--- a/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
+++ b/src/components/Sections/Contact Sections/DefaultContact/DefaultContact.astro
@@ -8,13 +8,15 @@ import SocialLinkComponent from "@components/SocialLink.astro";
 const props = Astro.props;
 ---
 
-<div class:list={[s["default_contact"], s["container"]]} id={s["contact"]} data-highlight="true">
+<div class:list={[s["default_contact"], 'page-section']} id="contact" data-highlight="true">
     <Container>
+        <header class="page-section__header">
+            <h2>{props.title}</h2>
+        </header>
         <div
             class={s["default_contact__content"]}
         >
-            <article>
-                <h2>{props.title}</h2>
+            <div>
                 <address class={s["two_column_contact__phone"]}>
                     {
                         props.contact.phone.map((phone: any) => (
@@ -50,7 +52,7 @@ const props = Astro.props;
                 <div class={s["working_hours"]}>
                     <slot set:html={props.operatingHours} />
                 </div>
-            </article>
+            </div>
 
             <div class={s["default_contact__location"]}>
                 <address>
