--- a/src/components/Sections/Contact Sections/OverlapContact/style.module.css
+++ b/src/components/Sections/Contact Sections/OverlapContact/style.module.css
@@ -7,7 +7,7 @@
 
     /* border-radius: var(--size-2); */
 
-    background: var(--clr-section-highlight) border-box;
+    /* background: var(--clr-section-highlight) border-box; */
     overflow: hidden;
 }
 
@@ -51,7 +51,7 @@
 
         /* border-radius: var(--size-3); */
 
-        background: linear-gradient(white 0 0) padding-box, var(--clr-primary) border-box;
+        /* background: linear-gradient(white 0 0) padding-box, var(--clr-primary) border-box; */
         overflow: hidden;
     }
 
