--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -1,4 +1,5 @@
 ---
+import { fetchPage } from '@utils/payload';
 import { translateFooterItem } from '@utils/translations';
 
 interface Props {
@@ -15,6 +16,8 @@ import { Image } from "astro:assets";
 const { title, company, url, country } = Astro.props;
 const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
+const { companyName, companyUrl, footerStyle } = await fetchPage(['companyName', 'companyUrl', 'footerStyle']);
+console.log(companyName, companyUrl, footerStyle);
 ---
 
 <footer class:list={[s["footer"], "full-width"]}>
@@ -33,8 +36,8 @@ const designedByText = translateFooterItem('designed_by', country);
                     loading="lazy"
                     decoding="async"
                 />
-                <a href={url} target="_blank" rel="noopener noreferrer">
-                    {designedByText} {company}
+                <a href={companyUrl} target="_blank" rel="noopener noreferrer">
+                    {designedByText} {companyName}
                 </a>
             </p>
         </div>
