--- a/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
+++ b/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
@@ -2,7 +2,7 @@
 import type { WhyChooseUsColumnBlock } from "@utils/payload/types";
 interface Props extends WhyChooseUsColumnBlock {}
 
-import { Icon } from "astro-iconify";
+// import { Icon } from "astro-iconify";
 import s from "./style.module.css"
 import Container from "@components/Container.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
@@ -18,13 +18,13 @@ const cardStyles = [
 ];
 ---
 
-<div class="page-section" data-offscreen>
+<section class="page-section" data-offscreen aria-labelledby={props.id}>
     <Container>
         <div class={s["simple-stats__container"]}>
             <div class={s["simple-stats__grid"]} data-animate="slide-up" data-animate-children-only="true">
                 <div class={s["simple-stats__header"]}>
                     <div class={s["simple-stats__header-content"]}>
-                        <h2>{props.title}</h2>
+                        <h2 id={props.id}>{props.title}</h2>
                         <slot class={s["simple-stats__description"]} set:html={extractLexicalText(props.description)} />
                     </div>
                 </div>
@@ -36,7 +36,7 @@ const cardStyles = [
                                 class={s["simple-stats__item"]}
                             >
                                 <div class={s["simple-stats__icon-box"]}>
-                                    <Icon class={s["simple-stats__icon"]} name={card.icon} aria-hidden="true" focusable="false" />
+                                    {/* <Icon class={s["simple-stats__icon"]} name={card.icon} aria-hidden="true" focusable="false" /> */}
                                 </div>
                                 <div class={s["simple-stats__item-content"]}>
                                     <h3>{card.title}</h3>
@@ -49,4 +49,4 @@ const cardStyles = [
             </div>
         </div>
     </Container>
-</div>
+</section>
