--- a/src/components/Sections/Contact Sections/MultiLocation/MultiLocation.astro
+++ b/src/components/Sections/Contact Sections/MultiLocation/MultiLocation.astro
@@ -4,15 +4,15 @@ import s from "./style.module.css";
 import type { LocationType } from "@utils/types";
 import InfoCard from "@components/Cards/Info/InfoCard.astro";
 import Container from "@components/Container.astro";
-import { Icon } from "astro-iconify";
+// import { Icon } from "astro-iconify";
 const props = Astro.props;
 ---
 
-<div class:list={[s["two_location"], "page-section"]} id={s["contact"]} data-highlight="true">
+<section class:list={[s["two_location"], "page-section"]} id={s["contact"]} data-highlight="true" aria-labelledby={props.id}>
     <Container>
         <div class={s["two_location__content"]}>
             <article>
-                <h2>{props.title}</h2>
+                <h2 id={props.id}>{props.title}</h2>
                 <InfoCard cards={props.info} />
             </article>
         </div>
@@ -63,7 +63,7 @@ const props = Astro.props;
             </div>
         </div>
     </Container>
-</div>
+</section>
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
