--- a/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
+++ b/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
@@ -8,8 +8,8 @@ import SocialLinkComponent from "@components/SocialLink.astro";
 const props = Astro.props;
 ---
 
-<div class="page-section" id="contact" style="padding-bottom: 0;">
-    <Container>
+<section class="page-section" id="contact" style="padding-bottom: 0;" aria-labelledby={props.id}>
+    <Container> 
         <div class={s["overflow-contact__map"]} data-glow="true">
             <slot set:html={props.location.iframe} />
         </div>
@@ -19,7 +19,7 @@ const props = Astro.props;
         <Container>
             <div class={s["overlap-contact__top-row"]}>
                 <div>
-                    <h3>Localização</h3>
+                    <h3 id={props.id}>Localização</h3>
                     <address>
                         <slot
                             set:html={extractLexicalText(
@@ -79,4 +79,4 @@ const props = Astro.props;
             </div>
         </Container>
     </div>
-</div>
+</section>
