--- a/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
+++ b/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
@@ -7,10 +7,10 @@ import IconLink from "@components/IconLink.astro";
 const props = Astro.props;
 ---
 
-<div class:list={[s["two_column_contact"], "page-section"]} id="contact" data-highlight="true">
+<section class:list={[s["two_column_contact"], "page-section"]} id="contact" data-highlight="true" aria-labelledby={props.id}>
     <Container>
         <header class={s["content_section__header"]}>
-            <h2>{props.title}</h2>
+            <h2 id={props.id}>{props.title}</h2>
         </header>
         <div class={s["two_column_contact__content"]}>
             <div class={s["two_column_contact__body"]}>
@@ -49,4 +49,4 @@ const props = Astro.props;
             </div>
         </div>
     </Container>
-</div>
+</section>
