--- a/src/components/Sections/ContentWithGrid/ContentWithGrid.astro
+++ b/src/components/Sections/ContentWithGrid/ContentWithGrid.astro
@@ -9,15 +9,16 @@ import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
-<div
+<section
     class:list={[s["content-with-grid"], "page-section"]}
     data-highlight={props.highlight}
     id={props["anchor id"]?.split(" ").join("-")}
     data-offscreen
+    aria-labelledby={props.id}
 >
     <Container>
         <header class:list={[s["content-with-grid__header"], "page-section__header"]}>
-            <h2>{props.title}</h2>
+            <h2 id={props.id}>{props.title}</h2>
             <slot set:html={extractLexicalText(props.body)} />
         </header>
 
@@ -25,4 +26,4 @@ const props = Astro.props;
             {props['card type'] === 'basic' && <Basic cards={props['card grid']}/>}
         </div>
     </Container>
-</div>
+</section>
