--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -8,18 +8,19 @@ import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
-<div
+<section
     class:list={[s["content-with-media"], "page-section"]}
     data-highlight={props.highlight}
     id={props["anchor id"]?.split(" ").join("-")}
     data-offscreen
     data-animate="fade-slide"
+    aria-labelledby={props.id}
 >
     <Container>
         <div class={s["content-with-media__content_wrapper"]} data-position={props.position}>
             <article class={s["content-with-media__article"]}>
                 <header class={s["content-with-media__header"]}>
-                    <h2>{props.title}</h2>
+                    <h2 id={props.id}>{props.title}</h2>
                 </header>
                 <div class={s["content-with-media__content"]}>
                     <slot set:html={extractLexicalText(props.body)} />
@@ -36,4 +37,4 @@ const props = Astro.props;
             </div>
         </div>
     </Container>
-</div>
+</section>
