--- a/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
+++ b/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
@@ -11,7 +11,7 @@ import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
-<div class:list={[s["content_section"], "page-section"]} data-highlight="false" data-offscreen>
+<section class:list={[s["content_section"], "page-section"]} data-highlight="false" data-offscreen aria-labelledby={props.id}>
     <Container>
         <div
             class={s["three_image_cta__container"]}
@@ -19,7 +19,7 @@ const props = Astro.props;
             <div class={s["three_image_cta__content_wrapper"]}>
                 <article class={s["three_image_cta__content"]}>
                     <header class="page-section__header">
-                        <h2>{props.title}</h2>
+                        <h2 id={props.id}>{props.title}</h2>
                     </header>
                     <slot set:html={extractLexicalText(props.body)} />
     
@@ -44,4 +44,4 @@ const props = Astro.props;
             </div>
         </div>
     </Container>
-</div>
+</section>
