--- a/src/components/Sections/Stats/WhyChooseUsInteractive/WhyChooseUsInteractive.astro
+++ b/src/components/Sections/Stats/WhyChooseUsInteractive/WhyChooseUsInteractive.astro
@@ -2,7 +2,7 @@
 import type { WhyChooseUsInteractiveBlock } from "@utils/payload/types";
 interface Props extends WhyChooseUsInteractiveBlock {}
 
-import { Icon } from "astro-iconify";
+// import { Icon } from "astro-iconify";
 import s from "./style.module.css";
 import Container from "@components/Container.astro";
 import CustomImage from "@components/CustomImage.astro";
@@ -10,14 +10,15 @@ import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
-<div
+<section
     class:list={["page-section", s["why-choose-us-interactive"]]}
     data-highlight="false"
     data-offscreen
+    aria-labelledby={props.id}
 >
     <Container>
         <header class={s["page-section__header"]}>
-            <h2>{props.title}</h2>
+            <h2 id={props.id}>{props.title}</h2>
             <slot set:html={extractLexicalText(props.description)} />
         </header>
 
@@ -62,7 +63,7 @@ const props = Astro.props;
             </div>
         </div>
     </Container>
-</div>
+</section>
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
