--- a/src/components/PageNavigation/ExpandingPillNav/style.module.css
+++ b/src/components/PageNavigation/ExpandingPillNav/style.module.css
@@ -40,6 +40,13 @@
     max-width: 150px;
 }
 
+.nav__logo-image {
+    width: 100%;
+    height: 100%;
+    max-height: 60px;
+    object-fit: contain;
+}
+
 .nav-wrapper {
     position: relative;
     isolation: isolate;
