--- a/src/components/Sections/CtaSection/ThreeImageCta/style.module.css
+++ b/src/components/Sections/CtaSection/ThreeImageCta/style.module.css
@@ -37,19 +37,25 @@
     max-height: 350px;
 }
 
-.three_image_cta___image_0 {
+.three_image_cta___image:nth-child(1) {
     grid-column: 1 / 2;
     grid-row: 1/2;
 }
 
-.three_image_cta___image_1 {
+.three_image_cta___image:nth-child(2) {
     grid-column: 2 / -1;
     grid-row: 1/2;
 }
 
-.three_image_cta___image_2 {
+.three_image_cta___image:nth-child(3) {
     grid-column: 1 / -1;
     grid-row: 2 / -1;
+}
+
+.three_image_cta__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-3);
 }
 
 @media (min-width: 768px) {
@@ -90,17 +96,17 @@
         gap: var(--gap);
     }
 
-    .three_image_cta___image_0 {
+    .three_image_cta___image:nth-child(1) {
         grid-row: 1 / 4;
         grid-column: 1 / 2;
     }
 
-    .three_image_cta___image_1 {
+    .three_image_cta___image:nth-child(2) {
         grid-row: 4 / -1;
         grid-column: 1 / 2;
     }
 
-    .three_image_cta___image_2 {
+    .three_image_cta___image:nth-child(3) {
         grid-row: 1 / -1;
         grid-column: 2 / -1;
     }
