--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -1,5 +1,6 @@
 ---
 import { translateFooterItem } from '@utils/translations';
+import { fetchPage } from "@utils/payload";
 
 interface Props {
     title: string;
@@ -15,6 +16,10 @@ import { Image } from "astro:assets";
 const { title, company, url, country } = Astro.props;
 const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
+const { companyUrl, companyName } = await fetchPage([
+	"companyUrl",
+	"companyName",
+]);
 ---
 
 <footer class:list={[s["footer"], "full-width"]}>
@@ -33,8 +38,8 @@ const designedByText = translateFooterItem('designed_by', country);
                     loading="lazy"
                     decoding="async"
                 />
-                <a href={url} target="_blank" rel="noopener noreferrer">
-                    {designedByText} {company}
+                <a href={companyUrl} target="_blank" rel="noopener noreferrer">
+                    {designedByText} {companyName}
                 </a>
             </p>
         </div>
