feat: Add RoundedAbout section and integrate it into Sections component

--- a/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
+++ b/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
@@ -6,6 +6,8 @@ import IconLink from "@components/IconLink.astro";
 import SocialLinkComponent from "@components/SocialLink.astro";
 
 const props = Astro.props;
+
+console.log(props)
 ---
 
 <section class="page-section" id="contact" style="padding-bottom: 0;" aria-labelledby={props.id}>
