--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -12,6 +12,7 @@ import WhyChooseUsGrid from "@components/Sections/Stats/WhyChooseUsGrid/WhyChoos
 import VerticalImageCta from "@components/Sections/CtaSection/VerticalImageCta/VerticalImageCta.astro"
 import WhyChooseUsInteractive from "@components/Sections/Stats/WhyChooseUsInteractive/WhyChooseUsInteractive.astro"
 import SymbioticAbout from "@components/Sections/SymbioticAbout/SymbioticAbout.astro"
+import RoundedAbout from "@components/Sections/RoundedAbout/RoundedAbout.astro"
 
 const {blocks, socialLinks, operatingHours, coreValues} = await fetchPage(['blocks', 'socialLinks', 'operatingHours', 'coreValues'])
 ---
@@ -26,7 +27,8 @@ const {blocks, socialLinks, operatingHours, coreValues} = await fetchPage(['bloc
             case 'content-with-grid':
                 return <ContentWithGrid {...block} />
             case 'symbiotic-about':
-                return <SymbioticAbout {...block} />
+                // return <SymbioticAbout {...block} />
+                return <RoundedAbout {...block} />
             case 'why-choose-us-column':
                 return <WhyChooseUsColumn {...block}/>
             case 'why-choose-us-grid':
