--- a/src/components/Sections/SymbioticAbout/style.module.css
+++ b/src/components/Sections/SymbioticAbout/style.module.css
@@ -52,6 +52,7 @@
     grid-column: 1 / -1;
     grid-row: 2 / -2;
     padding-block: var(--container-padding-block);
+    text-align: left;
 }
 
 .symbiotic-about__content::before,
