--- a/src/components/Sections/Testimonial/TestimonialCarousel/TestimonialCarousel.astro
+++ b/src/components/Sections/Testimonial/TestimonialCarousel/TestimonialCarousel.astro
@@ -1,6 +1,8 @@
 ---
 import Container from "@components/Container.astro";
 import "./style.css";
+import Carousel from "@components/Carousel.astro";
+import CarouselItem from "@components/CarouselItem.astro";
 ---
 
 <div class="testimonial-carousel">
@@ -14,66 +16,25 @@ import "./style.css";
                 <span>Anchor</span>
             </div>
         </header>
-        <div role="region" aria-label="Testimonials carousel demo">
-            <div
-                class="carousel carousel--scroll-markers carousel--scroll-buttons carousel--unsnapped-inert"
-                aria-live="polite"
-            >
-                <div class="carousel__slide" data-label="Slide 1">
-                    <figure
-                        class="testimonial"
-                        role="tabpanel"
-                        aria-label="Slide 1"
-                    >
-                        <blockquote cite="https://www.huxley.net/bnw/four.html">
-                            <p>
-                                Words can be like X-rays, if you use them
-                                properly—they’ll go through anything. You read and
-                                you’re pierced.
-                            </p>
-                        </blockquote>
-                        <figcaption>
-                            —Aldous Huxley, <cite>Brave New World</cite>
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="carousel__slide" data-label="Slide 2">
-                    <figure
-                        class="testimonial"
-                        role="tabpanel"
-                        aria-label="Slide 2"
-                    >
-                        <blockquote cite="https://www.huxley.net/bnw/four.html">
-                            <p>
-                                Words can be like X-rays, if you use them
-                                properly—they’ll go through anything. You read and
-                                you’re pierced.
-                            </p>
-                        </blockquote>
-                        <figcaption>
-                            —Aldous Huxley, <cite>Brave New World</cite>
-                        </figcaption>
-                    </figure>
-                </div>
-                <div class="carousel__slide" data-label="Slide 3">
-                    <figure
-                        class="testimonial"
-                        role="tabpanel"
-                        aria-label="Slide 3"
-                    >
-                        <blockquote cite="https://www.huxley.net/bnw/four.html">
-                            <p>
-                                Words can be like X-rays, if you use them
-                                properly—they’ll go through anything. You read and
-                                you’re pierced.
-                            </p>
-                        </blockquote>
-                        <figcaption>
-                            —Aldous Huxley, <cite>Brave New World</cite>
-                        </figcaption>
-                    </figure>
-                </div>
-            </div>
-        </div>
+        <Carousel>
+            <CarouselItem>
+                <figure
+                    class="testimonial"
+                    role="tabpanel"
+                    aria-label="Slide 1"
+                >
+                    <blockquote cite="https://www.huxley.net/bnw/four.html">
+                        <p>
+                            Words can be like X-rays, if you use them
+                            properly—they’ll go through anything. You read and
+                            you’re pierced.
+                        </p>
+                    </blockquote>
+                    <figcaption>
+                        —Aldous Huxley, <cite>Brave New World</cite>
+                    </figcaption>
+                </figure>
+            </CarouselItem>
+        </Carousel>
     </Container>
-</section>
+</div>
