--- a/src/components/Sections/ContentWithGrid/ContentWithGrid.astro
+++ b/src/components/Sections/ContentWithGrid/ContentWithGrid.astro
@@ -6,6 +6,8 @@ import Container from "@components/Container.astro";
 import Basic from "@components/Cards/Basic/Basic.astro"
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
+import Alternating from "@components/Cards/Alternating/Alternating.astro";
+import AlternatingBasic from "@components/Cards/AlternatingBasic/AlternatingBasic.astro";
 const props = Astro.props;
 ---
 
@@ -24,6 +26,7 @@ const props = Astro.props;
 
         <div class={s["content-with-grid__grid-wrapper"]}>
             {props['card type'] === 'basic' && <Basic cards={props['card grid']}/>}
+            {props['card type'] === 'alternating basic' && (<AlternatingBasic cards={props['card grid']} />)}
         </div>
     </Container>
 </section>
