--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -29,7 +29,7 @@ const {blocks, socialLinks, operatingHours, coreValues} = await fetchPage(['bloc
                 return <ContentWithGrid {...block} />
             case 'symbiotic-about':
                 return <SymbioticAbout {...block} />
-            // case 'rounded-about':
+            // case 'symbiotic-about':
             //     return <RoundedAbout {...block} />
             case 'why-choose-us-column':
                 return <WhyChooseUsColumn {...block}/>
