--- a/src/components/Cards/Alternating/Alternating.astro
+++ b/src/components/Cards/Alternating/Alternating.astro
@@ -1,9 +1,7 @@
 ---
-interface Card {
-    [key: string]: {
-        [key: string]: any;
-    };
-}
+import type {BasicCard} from '@utils/payload/types'
+import { extractLexicalText } from '@utils/payload/helpers';
+
 import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 const { cards } = Astro.props;
@@ -11,13 +9,13 @@ const { cards } = Astro.props;
 
 <div class={s["alternating-card-grid"]}>
     {
-        cards.map((card: Card) => (
+        cards.map((card: BasicCard) => (
             <div class={s["alternating-card"]} data-has-background>
                 <div class={s["alternating-card__image-wrapper"]}>
-                    {card.expand.image && (
+                    {card.image && (
                         <CustomImage
                             eager={false}
-                            image={card.expand.image}
+                            image={card.image}
                             size="medium"
                             classlist={s["alternating-card__image"]}
                         />
@@ -25,7 +23,7 @@ const { cards } = Astro.props;
                 </div>
                 <article>
                     <h3>{card.title}</h3>
-                    <slot set:html={card.content} />
+                    <slot set:html={extractLexicalText(card.body)} />
                 </article>
             </div>
         ))
